# erpfinkzeit

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
finkzeit/: __init__.py  hooks.py  modules.txt  patches.txt
finkzeit/config/: desktop.py  docs.py  finkzeit.py
finkzeit/finkzeit/: calendar_feed.py  credit_controller.py  erpnext.py  expenses.py  filters.py  migration.py  pdf.py  permissions.py  softcard.py  utils.py  zsw.py
finkzeit/finkzeit/custom/: expense_claim.json  expense_claim_detail.json  item.json  journal_entry_account.json  payment_entry.json
finkzeit/finkzeit/doctype/beschriftung/: beschriftung.js  beschriftung.json  beschriftung.py  test_beschriftung.js  test_beschriftung.py
finkzeit/finkzeit/doctype/buchhaltungsperiode/: buchhaltungsperiode.js  buchhaltungsperiode.json  buchhaltungsperiode.py  test_buchhaltungsperiode.js  test_buchhaltungsperiode.py
finkzeit/finkzeit/doctype/budget_overhead/: budget_overhead.js  budget_overhead.json  budget_overhead.py  test_budget_overhead.js  test_budget_overhead.py
finkzeit/finkzeit/doctype/calendar_feed_settings/: calendar_feed_settings.js  (+4 more)
finkzeit/fixtures/: custom_field.json
finkzeit/patches/v1_17/: move_transponder_customer_to_child_table.py
finkzeit/patches/v1_9/: add_legal_document_types.py
finkzeit/public/: build.json
finkzeit/public/KeyCreator/: .gitignore  index.html  readme.md
finkzeit/public/js/: customer.js  fink_common.js  iban.js  payment_entry.js  payment_proposal_list.js  purchase_invoice_list.js  supplier.js
finkzeit/translations/: de.csv
(+210 files in other folders)
