[project]
name = "finkzeit"
authors = [
    { name = "Fink Zeitsysteme/libracore", email = "info@libracore.com"}
]
description = "ERPNext Extensions for Fink Zeitsysteme"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # dependencies
    "frappe",
    "openpyxl",
    "icalendar",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project.urls]
Homepage = "https://git.libracore.io/libracore/erpfinkzeit"
Repository = "https://git.libracore.io/libracore/erpfinkzeit.git"
"Bug Reports" = "https://git.libracore.io/libracore/erpfinkzeit/issues"
